--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-    <img src="m1.png"/ width="1500" height="1000">
+    <img src="img/m1.png"/ width="1500" height="1000">
     <p>heyyyyyyy Justin</p>
 
     <!--anna akana-->
