Use as 15400 project documentary page

--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@
 
     <div class="row">
         <div class="col-sm-6"> 
-            <h1>My online journal.</h1> 
+            <h1>Documentation for 15400 project</h1> 
         </div>
         <div class="col-sm-6">
-            <h1>My online journal.</h1> 
+            <h1>Initial written proposal here: </h1> 
         </div>
     </div>
 
-
-
-    <img src="img/m1.png"/ width="1500" height="1000">
-    <p>heyyyyyyy Justin</p>
-
     <!--anna akana-->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Y8Gt4Jxn3lk" frameborder="0" allowfullscreen></iframe>
+<!--     <iframe width="560" height="315" src="https://www.youtube.com/embed/Y8Gt4Jxn3lk" frameborder="0" allowfullscreen></iframe>
 
     <a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=gxsW2LT24WU" target="_blank">Miss Earth - Short film</a>
 
-
+ -->
+    
 </body>
 
 </html>
