--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
     <div class="row">
         <div class="col-sm-6"> 
-            <h1>Documentation for 15400 project</h1> 
+            <h1>Project Proposal Page</h1> 
+            <h2>Chris Sheng, jiaxians</h2> 
+            <h2>Carnegie Mellon University, Class of 2019</h2> 
         </div>
+        <br />
         <div class="col-sm-6">
-            <h1>Initial written proposal here: </h1> 
+            <h2>Initial written proposal: </h2>
+            <h2>https://docs.google.com/a/andrew.cmu.edu/document/d/1PD9t4pU9f1uuogFpBIIpslriWgIU0WOz2GSaVoID5xs/edit?usp=sharing </h2> 
         </div>
     </div>
 
