--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 <body>
 
     <div class="row">
-        <div class="col-sm-6"> 
             <h1>Project Proposal Page</h1> 
             <h2>Chris Sheng, jiaxians</h2> 
             <h2>Carnegie Mellon University, Class of 2019</h2> 
-        </div>
-        <br />
-        <div class="col-sm-6">
-            <h2>Initial written proposal: </h2>
-            <h2>https://docs.google.com/a/andrew.cmu.edu/document/d/1PD9t4pU9f1uuogFpBIIpslriWgIU0WOz2GSaVoID5xs/edit?usp=sharing </h2> 
-        </div>
+    </div>
+    
+    <div class="row">
+        <h2>Initial written proposal: </h2>
+        <h2>https://docs.google.com/a/andrew.cmu.edu/document/d/1PD9t4pU9f1uuogFpBIIpslriWgIU0WOz2GSaVoID5xs/edit?usp=sharing </h2> 
     </div>
 
     <!--anna akana-->
