--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     </div>
     
     <div class="row">
-        <h2>Initial written proposal: </h2>
-        <h2>https://docs.google.com/a/andrew.cmu.edu/document/d/1PD9t4pU9f1uuogFpBIIpslriWgIU0WOz2GSaVoID5xs/edit?usp=sharing </h2> 
+        <h2><a href="https://docs.google.com/a/andrew.cmu.edu/document/d/1PD9t4pU9f1uuogFpBIIpslriWgIU0WOz2GSaVoID5xs/edit?usp=sharing">Initial written proposal </a></h2>
     </div>
 
     <!--anna akana-->
