--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
     <div class="row">
         <h2><a href="https://docs.google.com/a/andrew.cmu.edu/document/d/1PD9t4pU9f1uuogFpBIIpslriWgIU0WOz2GSaVoID5xs/edit?usp=sharing">Initial written proposal </a></h2>
     </div>
+    
+     <div class="row">
+        <h2><a href="https://docs.google.com/a/andrew.cmu.edu/document/d/1PD9t4pU9f1uuogFpBIIpslriWgIU0WOz2GSaVoID5xs/edit?usp=sharing"> Milestone Report + New Project Proposal (due to team switch) </a></h2>
+    </div>
 
-    <!--anna akana-->
-<!--     <iframe width="560" height="315" src="https://www.youtube.com/embed/Y8Gt4Jxn3lk" frameborder="0" allowfullscreen></iframe>
-
-    <a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=gxsW2LT24WU" target="_blank">Miss Earth - Short film</a>
-
- -->
     
 </body>
 
