first biweekly report

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
      <div class="row">
         <h2><a href="https://docs.google.com/a/andrew.cmu.edu/document/d/1TbijYRUK3D-ycNO7lZdc0t6BCrqBkmWuFKC6dq6G-hY/edit?usp=sharing"> Milestone Report + New Project Proposal (due to team switch) </a></h2>
     </div>
+    
+    <div class="row">
+        <h2><a href="ChrisSheng97.github.io/BiweeklyReport_20180201.pdf"> 20180201 Milestone Report </a></h2>
+    </div>
 
     
 </body>
