--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <div class="row">
         <h2><a href="ChrisSheng97.github.io/BiweeklyReport_20180201.pdf"> 20180201 Milestone Report </a></h2>
     </div>
+    
+    <div class="row">
+        <h2><a href="ChrisSheng97.github.io/BiweeklyReport_20180215.pdf"> 20180215 Milestone Report </a></h2>
+    </div>
 
     
 </body>
