--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     <div class="row">
         <h2><a href="ChrisSheng97.github.io/BiweeklyReport20180406.pdf"> 20180406 Milestone Report </a></h2>
     </div>
+    
+    <div class="row">
+        <h2><a href="ChrisSheng97.github.io/BiweeklyReport20180427.pdf"> 20180427 Milestone Report </a></h2>
+    </div>
 
     
 </body>
